// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionBank converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        undefined,
      ],
      "content": Object {
        "choose": "1",
        "chooseAll": false,
      },
      "id": "mockKey",
      "type": "ObojoboDraft.Chunks.QuestionBank",
    },
    undefined,
  ],
  "content": Object {
    "choose": 1,
    "chooseAll": true,
    "triggers": "mock-triggers",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`QuestionBank converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": undefined,
      "id": "mockKey",
      "type": "ObojoboDraft.Chunks.QuestionBank",
    },
    undefined,
  ],
  "content": Object {
    "choose": "all",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`QuestionBank converter slateToObo converts a Slate node to an OboNode without content 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": undefined,
      "id": "mockKey",
      "type": "ObojoboDraft.Chunks.QuestionBank",
    },
    undefined,
  ],
  "content": Object {
    "choose": "1",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
